--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@ h2 {
          width:70%;
  }
 </style>
+<meta name="google-site-verification" content="eCnle1KS8GJxHrelOFtykEig1gZ8g_188Iqr-GLIer0" />
 </head>
 <body>
 <div class = "header">
@@ -78,7 +79,7 @@ h2 {
 <div class = "content">
         I am a postdoctoral researcher co-mentored by <a href="https://people.eecs.berkeley.edu/~sseshia/">Prof. Sanjit Seshia</a>
         and <a href ="https://pages.cs.wisc.edu/~aws/">Prof. Aws Albarghouthi</a>.
-        Previously, I was a PhD student in Princeton University's Computer Science department
+        Previously, I was a PhD student at Princeton University
         advised by <a href = "http://www.cs.princeton.edu/~aartig/">Prof. Aarti Gupta</a>.
         <br />
         My CV can be found <a href = "cv.pdf">here</a>.
