--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ body {
   background-color: #f1f1f1;
   background-size: cover;
   background-attachment:fixed;
-  font-weight: lighter;
+  font-weight: 300;
   padding:0px;
   margin: 0px;
   font-size: 1.1em;
@@ -21,7 +21,7 @@ body {
 a {
   text-decoration: none;
   color: #0066bb;
-  font-weight: normal;
+  font-weight: 500;
 }
 a:hover{
   text-decoration: none;
@@ -81,12 +81,12 @@ h1 {
   padding-top:0;
   font-size:2em;
   padding-bottom:0;
-  font-weight: normal;
+  font-weight: 500;
   display:inline;
 }
 h2 {
   color: #0066bb;
-  font-weight: normal;
+  font-weight: 500;
   font-size:1.2em;
   margin:0em;
 }
@@ -112,7 +112,7 @@ h2 {
   width: 4em;
   display: inline-block;
   color:#0066bb;
-  font-weight: normal;
+  font-weight: 500;
 }
 .menu {
   margin: 0em;
@@ -128,7 +128,7 @@ h2 {
   margin-right:1em;
   border-right:1px solid #bbbbbb;
   float: left;
-  font-weight: normal;
+  font-weight: 500;
 }
 .menu a {
   border: 1px solid #bbbbbb;
@@ -144,7 +144,7 @@ h2 {
   font-style: italic;
   font-size: 1.1em;
   display:block;
-  font-weight:normal;
+  font-weight: 500;
 }
 </style>
 <meta name="google-site-verification" content="eCnle1KS8GJxHrelOFtykEig1gZ8g_188Iqr-GLIer0" />
