--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ h2 {
         advised by <a href = "http://www.cs.princeton.edu/~aartig/">Prof. Aarti Gupta</a>.
 
       <div class="subbox">
-      I am broadly interested in the application of automated verification and synthesis techniques in different domains. In practice, straightforward application of these techniques faces scalability limitations, requiring new domain-specific representations and algorithmic approaches.
+      I am broadly interested in the application of automated verification and synthesis techniques in different domains. In practice, straightforward application of these techniques faces scalability and expressivity limitations, requiring new domain-specific representations and algorithmic approaches.
       </div>
     </div>
     <div class = "box">
@@ -210,10 +210,12 @@ h2 {
             Lauren Pick, Ankush Desai, Aarti Gupta.
             </span>
             <span class="conf">
-            To appear at PLDI 2023. 
+            PLDI 2023. 
             </span>
             <div class="buttons">
+              <a href="psym-extended.pdf" class="button">paper</a>
               <a href="psym-extended.pdf" class="button">extended version</a>
+              <a href="https://youtu.be/FXkSMC-kUE8?t=3575", class = "button">talk</a>
               <a href="https://github.com/p-org/P/tree/master/Src/PRuntimes/PSymRuntime" class="button">code</a>
             </div>
         </li>
@@ -222,7 +224,7 @@ h2 {
             Amanda Xu, Abtin Molavi, Lauren Pick, Swamit S. Tannu, Aws Albarghouthi.
             </span>
             <span class="conf">
-            To appear at PLDI 2023. 
+            PLDI 2023. 
             </span>
             <div class="buttons">
               <a href="https://arxiv.org/abs/2211.09691" class="button">paper</a>
