--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ h2 {
         advised by <a href = "http://www.cs.princeton.edu/~aartig/">Prof. Aarti Gupta</a>.
 
       <div class="subbox">
-      I am broadly interested in the application of automated verification and synthesis techniques in different domains. In practice, straightforward application of these techniques faces scalability and expressivity limitations, requiring new domain-specific representations and algorithmic approaches.
+      I am broadly interested in the application of automated verification and synthesis techniques in different domains. In practice, the straightforward application of these tools and techniques faces scalability and expressivity limitations. I address these limitations by developing new representations and algorithmic approaches that take advantage of the structure of the systems and properties under consideration.
       </div>
     </div>
     <div class = "box">
