--- a/index.html
+++ b/index.html
@@ -172,7 +172,13 @@ h2 {
         advised by <a href = "http://www.cs.princeton.edu/~aartig/">Prof. Aarti Gupta</a>.
 
       <div class="subbox">
-      I am broadly interested in the application of automated verification and synthesis techniques in different domains. In practice, the straightforward application of these tools and techniques faces scalability and expressivity limitations. I address these limitations by developing new representations and algorithmic approaches that take advantage of the structure of the systems and properties under consideration.
+        <b>
+        I am currently on the academic job market! I have made my <a href = "research.pdf">research</a>, <a href = "teaching.pdf">teaching</a>, and <a href = "diversity.pdf">diversity</a> statements available.
+        </b>
+      </div>
+
+      <div class="subbox">
+      I am broadly interested in the application of automated verification and synthesis techniques in different domains. In practice, the straightforward application of these kinds of tools and techniques faces scalability and expressivity limitations. I address these limitations by developing new representations and algorithmic approaches that take advantage of the structure of the systems and properties under consideration.
       </div>
     </div>
     <div class = "box">
