--- a/index.html
+++ b/index.html
@@ -215,19 +215,17 @@ img {
     <div class = "intro">
        <div class = "box">
         <div class="subbox">
-    I work on automated techniques for formally reasoning about programs. I am interested in (a) applying these techniques to help people understand and correctly interact with existing software components and (b) figuring out how to scale these techniques so that they can be usefully applied to real systems.
-More specific recent interests are in <i>applications of static analysis and synthesis to LLM interpretability</i> and <i>automated reasoning about concurrent and distributed systems</i>. <br /><br />
-           I will be joining the department of Computer Science and Engineering at the Chinese University of Hong Kong (<a href="https://www.cse.cuhk.edu.hk/">CSE@CUHK</a>) in the fall.
+           I am an assistant professor in the department of Computer Science and Engineering at the Chinese University of Hong Kong (<a href="https://www.cse.cuhk.edu.hk/">CSE@CUHK</a>), where I work on
+automated techniques for formally reasoning about programs. I am interested in (a) applying these techniques to help people understand and correctly interact with existing software components and (b) figuring out how to scale these techniques so that they can be usefully applied to real systems.
+More specific recent interests are in <i>applications of static analysis and synthesis to LLM interpretability</i> and <i>automated reasoning about concurrent and distributed systems</i>.
           <b>
-            I am currently looking for students! Please reach out via email if you are interested in working with me.
+I am currently looking for students! Please reach out via email if you are interested in working with me.
           </b>
         </div>
       </div>
     </div>
 </div>
 <div class = "content" style="display:table">
-    <div>
-    </div>
     <h2><span class="material-symbols-outlined" style="font-size:1.25em">article</span> Publications</h2>
       <ul>
         <li><span class="paper-title">Psym: Efficient Symbolic Exploration of Distributed Systems.</span>
@@ -271,14 +269,6 @@ More specific recent interests are in <i>applications of static analysis and syn
             </span>
             <div class="buttons">
               <a href="https://arxiv.org/pdf/2208.13679.pdf" class="button">paper</a>
-            </div>
-        </li>
-        <li><span class="paper-title">Scaling Automatic Modular Verification.</span>
-            <span class="authors">Lauren Pick.</span>
-            <span class="conf">2021.</span>
-            <div class="buttons">
-              <a href="thesis.pdf" class = "button">thesis</a>
-              <a href="fpo_slides.pdf" class = "button">slides</a>
             </div>
         </li>
         <li><span class="paper-title">Unbounded Procedure Summaries from Bounded Environments.</span>
