--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@ h2 {
   font-size:1.2em;
   align-items: center;
   display:flex;
+  padding-top:0.5em;
   gap:0.5em;
 }
 img {
@@ -218,9 +219,6 @@ img {
            I am an assistant professor in the department of Computer Science and Engineering at the Chinese University of Hong Kong (<a href="https://www.cse.cuhk.edu.hk/">CSE@CUHK</a>), where I work on
 automated techniques for formally reasoning about programs. I am interested in (a) applying these techniques to help people understand and correctly interact with existing software components and (b) figuring out how to scale these techniques so that they can be usefully applied to real systems.
 More specific recent interests are in <i>applications of static analysis and synthesis to LLM interpretability</i> and <i>automated reasoning about concurrent and distributed systems</i>.
-          <b>
-I am currently looking for students! Please reach out via email if you are interested in working with me.
-          </b>
         </div>
       </div>
     </div>
@@ -228,6 +226,17 @@ I am currently looking for students! Please reach out via email if you are inter
 <div class = "content" style="display:table">
     <h2><span class="material-symbols-outlined" style="font-size:1.25em">article</span> Publications</h2>
       <ul>
+        <li><span class="paper-title">Checking Observational Correctness of Database Systems</span>
+            <span class="authors">
+            Lauren Pick, Amanda Xu, Ankush Desai, Sanjit A. Seshia, Aws Albarghouthi.
+            </span>
+            <span class="conf">
+            OOPSLA 2025. 
+            </span>
+            <div class="buttons">
+              <a href="oopsla25-1.pdf", class="button">paper</a>
+            </div>
+        </li>
         <li><span class="paper-title">Psym: Efficient Symbolic Exploration of Distributed Systems.</span>
             <span class="authors">
             Lauren Pick, Ankush Desai, Aarti Gupta.
